# mlx-template

./: .gitignore  LICENSE  README.md  environment.yml  eval.py  pyproject.toml  train.py
configs/: config.yaml
configs/data/: mnist.yaml  template.yaml
configs/model/: mnist.yaml  template.yaml
core/: __init__.py  callbacks.py  data.py  datamodule.py  loggers.py  module.py  summary.py  trainer.py
data/: __init__.py
data/mnist/: __init__.py  datamodule.py
data/template/: __init__.py  datamodule.py
models/: __init__.py  mnist.py  template_model.py
models/networks/: __init__.py  cnn.py  template_network.py
utils/: helpers.py
